--- a/docs/_sass/color_schemes/duke.scss
+++ b/docs/_sass/color_schemes/duke.scss
@@ -3,7 +3,7 @@
 //
 
 $body-font-family: "Open Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-  Roboto, "Helvetica Neue", Arial, sans-serif !default;
+  Roboto, "Helvetica Neue", Arial, sans-serif;
 $mono-font-family: "SFMono-Regular", Menlo, Consolas, Monospace !default;
 $root-font-size: 16px !default; // Base font-size for rems
 $body-line-height: 1.4 !default;
